<resources>
    <string name="app_name">PhotoWeatherApp</string>
    <string name="splash_screen_text">Pick, Capture, Share</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="grant_location_permission">Please allow the app to use your location to contiue</string>
    <string name="city_name">City name</string>
    <string name="search">search</string>
    <string name="saved_photos">Saved photos</string>
    <string name="photo_place_holder">photo place holder</string>
    <string name="open_camera">open camera</string>
    <string name="details">Details</string>
    <string name="feels_like">Feels like:</string>
    <string name="pressure">pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind">Wind:</string>
    <string name="pick_current_weather_then_capture_a_photo">pick current weather then capture a photo</string>
    <string name="photo" />
    <string name="share_to_facebook">share to facebook</string>
    <string name="share_to_twitter">share to twitter</string>
    <string name="capture">capture</string>
    <string name="save">save</string>
    <string name="lost_internet_connection">Lost internet connection</string>
    <string name="grant_camera_permission">Allow app to access your camera to proceed</string>
    <string name="un_known_error">Unknown error</string>
    <string name="not_found_search">City Not Found</string>
</resources>